--- a/src/ThinFrame/CommandLine/resources/services.yml
+++ b/src/ThinFrame/CommandLine/resources/services.yml
@@ -1,8 +1,12 @@
 services:
     thinframe.cli.commander:
         class: 'ThinFrame\CommandLine\Commands\Commander'
+        arguments: ['@thinframe.cli.arguments_container']
         tags:
             - { name: 'thinframe.cli.commander'}
+
+    thinframe.cli.arguments_container:
+        class: 'ThinFrame\CommandLine\ArgumentsContainer'
 
     thinframe.cli.simple_output_driver:
         class: 'ThinFrame\CommandLine\IO\Drivers\SimpleOutputDriver'
