--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
-        "thinframe/foundation": "dev-master"
+        "thinframe/foundation": "dev-master",
+        "thinframe/pcntl": "dev-master"
     },
     "require-dev": {
 
