--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
-        "thinframe/foundation": "@stable",
-        "thinframe/pcntl": "@stable"
+        "thinframe/foundation": "dev-develop",
+        "thinframe/pcntl": "dev-develop"
     },
     "require-dev": {
 
