--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.4.0",
         "thinframe/foundation": "dev-develop",
-        "thinframe/pcntl": "0.2.*",
+        "thinframe/pcntl": "dev-develop",
         "thinframe/applications": "dev-develop"
     },
     "require-dev": {
