--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
             "role": "Developer"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
         "thinframe/foundation": "dev-develop",
