--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -1,3 +1,16 @@
+parameters:
+    cli.abstract.bash_output_driver.class: 'ThinFrame\CommandLine\IO\Driver\BashOutputDriver'
+    cli.abstract.bash_input_driver.class: 'ThinFrame\CommandLine\IO\Driver\BashInputDriver'
+    cli.abstract.arguments_container.class: 'ThinFrame\CommandLine\IO\ArgumentsContainer'
+    cli.abstract.arguments_container.factory.class: 'ThinFrame\CommandLine\IO\Helper\ArgumentsContainerFactory'
+    cli.shortcodes_processor.class: 'ThinFrame\Foundation\Helper\ShortCodesProcessor'
+    cli.commander.class: 'ThinFrame\CommandLine\Command\Commander'
+    cli.commands.compgen.class: 'ThinFrame\CommandLine\Command\CompgenCommand'
+    cli.output_formatter.shortcodes.class: 'ThinFrame\CommandLine\IO\Formatter\ShortCodesFormatter'
+    cli.output_driver.class: 'ThinFrame\CommandLine\IO\OutputDriverInterface'
+    cli.input_driver.class: 'ThinFrame\CommandLine\IO\InputDriverInterface'
+    cli.arguments_container.class: 'ThinFrame\CommandLine\IO\ArgumentsContainerInterface'
+
 command_line:
     io:
         input_driver_service: 'cli.abstract.bash_input_driver'
