--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
         "php": ">=5.4.0",
         "thinframe/foundation": "dev-develop",
         "thinframe/pcntl": "dev-develop",
-        "thinframe/applications": "dev-develop"
+        "thinframe/applications": "dev-develop",
+        "league/climate": "2.4.*"
     },
     "require-dev": {
-
+        "phpunit/phpunit": "4.3.*"
     },
     "autoload": {
         "psr-4": {
